--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,29 @@
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy
-#spring.datasource.username=root
-#spring.datasource.password=admin123
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy
+spring.datasource.username=root
+spring.datasource.password=admin123
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
-#server.port = 8090
+server.port = 8080
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/test_spring
-spring.datasource.username=postgres
-spring.datasource.password=admin
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost/test_spring
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=false
 
 #server.port = 8090
 
