--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin123
 
@@ -8,10 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-server.port = 8080
+#server.port = 8080
 
-
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost/test_spring
